welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: recursive variable nPas needs type
	var nPas = nPas + 1;
                   ^Variables:10: error: recursive variable nPas needs type
	var nPas = nPas - 1;
                   ^